@@ -293,7 +293,7 @@ main(int /* argc ATS_UNUSED */, char *argv[])
         perror(0);
         error = DATA_PROCESSING_ERROR;
       } else {
-#if TS_HAS_POSIX_FADVISE
+#if HAVE_POSIX_FADVISE
         posix_fadvise(in_fd, 0, 0, POSIX_FADV_DONTNEED);
 #endif
         if (auto_filenames) {
